# xorc-oam-compiler

./: .dockerignore  .gitignore  .travis.yml  Compatibility.md  Dockerfile  Jenkinsfile  README.md  dune-project  jbuild  orcml.opam
bench/: mult-bench.orc
c/: README.md  binding.ml  dune  jbuild  main.c
examples/: 8-queens.orc  barrier.orc  bench.orc  bench_orig.orc  benchmark.orc  channel_sort.orc  coeffect.orc  coeffect_with_lib.orc  even_odd.orc  readers-writers.orc  tailrec.orc  with_lib.orc  with_prelude.orc
examples/lib/: bar.orc  foo.orc  funcs.orc
ide/: .merlin  ide.ml  index.html  jbuild  main.ml
ide3/: index.html  package.json  tsconfig.json  webpack.config.js
ide3/src/: index.ts  orcml.ts  worker.js  worker.ts
ide3/src/css/: custom.scss  main.css  main.scss
js/: dune  jbuild  main.d.ts  main.ml
lexer/: .merlin  jbuild  orcml_lexer.ml
lib/: json.orc
lib/json/: dune  jbuild  main.ml
lib/prelude/: dune  jbuild  main.ml
ppx_static/: dune  jbuild  ppx_static.ml
prelude/: core.orc  idioms.orc  list.orc  state.orc  time.orc  util.orc  web.orc
src/: .merlin  ast.ml  common.ml  compiler.ml  dune  env.ml  errors.ml  handcrafted.messages  inter.ml  inter0.ml  ir1.ml  jbuild  lexer.mll  lexer.sedlex.ml  mylib.ml  orcml.ml  orcml.mli  parser.mly  prims.ml  repository.ml  serialize.ml  serializer.ml  syntax.ml  testkit.ml
syntax/: .merlin  jbuild  syntax.ml
test/: .merlin  dune  jbuild  test_runner.ml
testkit/: .merlin  dune  jbuild  message_pack.ml  protocol.ml  testkit.ml  tests.ml
