(library
 (name orcml)
 (public_name orcml)
 (libraries base menhirLib sedlex stdio msgpck sexplib yojson mtime.clock.os)
 (preprocess
  (pps sedlex.ppx ppx_jane -allow-unannotated-ignores))
 (flags :standard -w -9 -w -39))

(rule
 (targets parser_messages.ml)
 (deps parser.mly handcrafted.messages)
 (action
  (with-stdout-to
   %{targets}
   (run menhir parser.mly --compile-errors handcrafted.messages))))

(menhir
 (flags --explain --dump --table)
 (modules parser))
