(executables
 (names testkit)
 (libraries orcml_testkit orcml_bin_lib)
 (modules testkit)
 (preprocess
  (pps ppx_jane -allow-unannotated-ignores))
 (flags :standard -w -9))

(library
 (name orcml_testkit)
 (libraries orcml async)
 (modules :standard \ testkit)
 (preprocess
  (pps ppx_jane))
 (flags :standard -w -9))
